--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,19 @@
 
   </head>
   <body>
+    <script>
+      window.watsonAssistantChatOptions = {
+        integrationID: "1d05f5d2-d86f-4445-a106-99ab3727f202", // The ID of this integration.
+        region: "au-syd", // The region your integration is hosted in.
+        serviceInstanceID: "a9311a70-4772-449a-9c9d-6f4eca06bc8c", // The ID of your service instance.
+        onLoad: async (instance) => { await instance.render(); }
+      };
+      setTimeout(function(){
+        const t=document.createElement('script');
+        t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+        document.head.appendChild(t);
+      });
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
